--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
   "name": "course-3-module-4-external-apis-and-fetching-lab",
   "version": "1.0.0",
+  "description": "You’ve just joined the front-end development team of a national safety awareness \r organization in the US. Your first assignment is to build a web application that \r fetches weather alerts from the National Weather Service API for a specific U.S. \r state. The app should dynamically display relevant alert headlines and handle edge \r cases like invalid input and network errors.",
+  "keywords": [],
+  "homepage": "https://github.com/Duncan553/course-3-module-4-external-apis-and-fetching-lab#readme",
+  "bugs": {
+    "url": "https://github.com/Duncan553/course-3-module-4-external-apis-and-fetching-lab/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Duncan553/course-3-module-4-external-apis-and-fetching-lab.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
   "main": "index.js",
-  "jest": {
-    "testEnvironment": "jsdom"
+  "directories": {
+    "test": "test"
   },
   "scripts": {
     "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "dependencies": {
+    "jest-environment-jsdom": "^30.0.5"
+  },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@testing-library/dom": "^10.4.1",
@@ -20,7 +32,7 @@
     "globals": "^15.8.0",
     "jest": "^29.7.0"
   },
-  "dependencies": {
-    "jest-environment-jsdom": "^30.0.5"
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
